--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,13 @@ a{
     width : 80%;
     margin: auto;
     overflow: auto;
+    padding-top: 28px;
+    padding-bottom: 28px;
 }
 
 header{
     background: #555555;
-    min-height: 55px;
+    min-height: 35px;
     color: #ffffff;
 }
 
@@ -105,6 +107,12 @@ footer{
     color : #ffffff;
     text-align: center;
     padding-top: 10px;
+
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
 
 }
 
