--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,13 @@ footer{
     height: 55px;
     color : #ffffff;
     text-align: center;
-    padding-top: 10px;
+    padding-top: -10px;
+
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
 
 }
 
